load("//bazel:defs.bzl", "compatible_with_rp2")

package(default_visibility = ["//visibility:public"])

# TODO: Needs LIB_FREERTOS_KERNEL defined.
cc_library(
    name = "hardware_flash",
    srcs = ["flash.c"],
    hdrs = ["include/hardware/flash.h"],
    includes = ["include"],
    target_compatible_with = compatible_with_rp2(),
    deps = [
        "//src/common/pico_base",
        "//src/rp2_common/pico_bootrom",
        "//src/rp2_common/pico_platform:hardware_structs",
        "//src/rp2_common/pico_multicore",
    ],
)
