load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "hardware_psram",
    srcs = ["psram.c"],
    hdrs = ["include/hardware/psram.h"],
    includes = ["include"],
    target_compatible_with = ["//bazel/constraint:rp2350"],
    deps = [
        "//src/rp2_common:hardware_structs",
        "//src/rp2_common:pico_platform",
        "//src/rp2_common/hardware_clocks",
        "//src/rp2_common/hardware_flash",
        "//src/rp2_common/hardware_gpio",
    ],
)
