load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel:defs.bzl", "compatible_with_rp2")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "no_warn_rwx_flag",
    linkopts = select({
        "//bazel/constraint:pico_toolchain_gcc_enabled": ["-Wl,--no-warn-rwx-segments"],
        "//conditions:default": [],
    }),
    visibility = ["//src:__subpackages__"],
)

cc_library(
    name = "pico_crt0",
    srcs = ["crt0.S"],
    hdrs = [
        "embedded_end_block.inc.S",
        "embedded_start_block.inc.S",
    ],
    target_compatible_with = compatible_with_rp2(),
    deps = [
        "//src/common/boot_picobin_headers",
        "//src/common/pico_base_headers",
        "//src/rp2_common:hardware_regs",
        "//src/rp2_common:pico_platform_internal",
        "//src/rp2_common/cmsis:cmsis_core",
        "//src/rp2_common/pico_bootrom",
    ],
)

# TODO: RISC-V support.
filegroup(
    name = "crt0_riscv",
    srcs = ["crt0_riscv.S"],
)
